// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-no-events-icon Renders \`c-no-events-icon\` with custom props correctly 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <transition-stub
    name="slide-y-reverse-transition"
  />
  <i
    aria-hidden="true"
    class="v-icon d-block material-icons theme--light secondary--text"
  >
    sync_problem
  </i>
</span>
`;

exports[`c-no-events-icon Renders \`c-no-events-icon\` with custom props correctly 2`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: 1120px; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <span>
    No events received for 2,476 days 0 hrs 2 mins 3 secs by some of dependencies
  </span>
</div>
`;

exports[`c-no-events-icon Renders \`c-no-events-icon\` with default props correctly 1`] = `<!---->`;

exports[`c-no-events-icon Renders \`c-no-events-icon\` with default props correctly 2`] = `undefined`;

exports[`c-no-events-icon Renders \`c-no-events-icon\` with value correctly 1`] = `
<span
  class="v-tooltip"
>
  <transition-stub
    name=""
  />
  <i
    aria-hidden="true"
    class="v-icon d-block material-icons theme--light error--text"
  >
    sync_problem
  </i>
</span>
`;

exports[`c-no-events-icon Renders \`c-no-events-icon\` with value correctly 2`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <span>
    No events received for 2,476 days 0 hrs 2 mins 3 secs by some of dependencies
  </span>
</div>
`;
